--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,8 @@
     "type": "project",
     "license": "MIT",
     "minimum-stability": "dev",
+    "version": "3.1.7",
+
     "autoload": {
         "psr-4": {
             "Mb13\\Test\\": "src/"
