--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,11 @@
     "license": "MIT",
     "minimum-stability": "dev",
     "version": "3.1.7",
+    "autoload": {
+        "psr-4": {
+            "Mb13\\DatabaseService\\": "src/"
+        }
+    },
     "authors": [
         {
             "name": "mbe",
